--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </nav>
             <br> 
             
-            <div class="card-group">
+            <li id="newsList"></li>
               <div class="card">
                 <div class="card-block">
                   <h4 class="card-title">Survey 1</h4>
@@ -75,6 +75,9 @@
                 </div>
                 <div class="card-footer">
                   <small class="text-muted">Approved</small>
+                  <a href="" class="badge badge-pill badge-success">UpVote</a>
+                  <a href="" class="badge badge-pill badge-danger">DownVote</a>
+                  <a href="#" class="btn btn-primary rightFloat">Download</a>
                 </div>
               </div>
               <div class="card">
@@ -95,9 +98,7 @@
                   <small class="text-muted">Approved</small>
                 </div>
               </div>
-            </div>
 
-            <div class="card-group">
               <div class="card">
                 <div class="card-block">
                   <h4 class="card-title">Survey 4</h4>
@@ -116,7 +117,6 @@
                   <small class="text-muted">Yet to be approved.</small>
                 </div>
               </div>
-            </div>
 
         </div>
         <!-- jQuery first, then Tether, then Bootstrap JS. -->
