--- a/register.html
+++ b/register.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Log In</title>
+    <title>Register</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="styles.css">
@@ -15,19 +15,10 @@
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="#">SurveyStore</a>
+        <a class="navbar-brand" href="#">DataBridge</a>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li>
-                    <a class="nav-link" href="#">Link</a>
-                </li>
             </ul> 
             <form class="form-inline my-2 my-lg-0">
                 <button class="btn btn-outline-success my-2 my-sm-0" href="login.html">Login</button>
@@ -40,6 +31,10 @@
     
     <div class="container">
       <form>
+        <div class="form-group row col-sm-10 offset-sm-2">
+          <h1>Register</h1>
+        </div>
+        <br> <br>
         <div class="form-group row">
           <label for="inputUsername" class="col-sm-2 col-form-label">Username</label>
           <div class="col-sm-10">
@@ -53,7 +48,7 @@
           </div>
         </div>
         <div class="form-group row">
-          <div class="col-sm-10">
+          <div class="col-sm-10 offset-sm-2">
             <div class="form-check">
               <label class="form-check-label">
                 <input class="form-check-input" type="checkbox"> I understand the Terms and Conditions.
