--- a/unverified.html
+++ b/unverified.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>SurveyStore</title>  
+        <title>DataBridge</title>  
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -21,10 +21,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Verified<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="#">Verified</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">UnVerified</a>
+                        <a class="nav-link" href="#">UnVerified<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Upload</a>
@@ -50,8 +50,8 @@
                   <p class="card-text">Brief Description.</p>
                 </div>
                 <div class="card-footer">
-                  <small class="text-muted">Approved</small>
-                  <a href="" class="badge badge-pill badge-danger">Flag</a>
+                  <a href="" class="badge badge-pill badge-success">UpVote</a>
+                  <a href="" class="badge badge-pill badge-danger">DownVote</a>
                   <a href="#" class="btn btn-primary rightFloat">Download</a>
                 </div>
               </div>
@@ -61,12 +61,11 @@
                   <p class="card-text">Brief Description.</p>
                 </div>
                 <div class="card-footer">
-                  <small class="text-muted">Approved</small>
-                  <a href="" class="badge badge-pill badge-danger">Flag
+                  <a href="" class="badge badge-pill badge-success">UpVote</a>
+                  <a href="" class="badge badge-pill badge-danger">DownVote</a>
                   <a href="#" class="btn btn-primary rightFloat">Download</a>
                 </div>
               </div>
-
         </div>
         <!-- jQuery first, then Tether, then Bootstrap JS. -->
         <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
