--- a/about.html
+++ b/about.html
@@ -39,8 +39,8 @@
         <br>
 
         <div class='container'>
-            <nav class="navbar navbar-light" style="background-color: #2d3666;">
-                <h2><span class="badge badge-pill" style = "background-color: #2d3666;">About DataBridge</span></h2>
+            <nav class="navbar navbar-light bg-primary">
+                <h2><span class="badge badge-pill bg-primary">About DataBridge</span></h2>
             </nav>
             <br> 
             <div class="form-group">
