--- a/register.html
+++ b/register.html
@@ -30,10 +30,10 @@
     <br> <br> <br>
     
     <div class="container">
+      <nav class="navbar navbar-light bg-primary">
+          <h2><span class="badge badge-pill bg-primary">Register</span></h2>
+      </nav>
       <form>
-        <div class="form-group row col-sm-10 offset-sm-2">
-          <h1>Register</h1>
-        </div>
         <br> <br>
         <div class="form-group row">
           <label for="inputUsername" class="col-sm-2 col-form-label">Username</label>
