--- a/upload.html
+++ b/upload.html
@@ -40,8 +40,8 @@
 
 
         <div class='container'>
-            <nav class="navbar navbar-light" style="background-color: #2d3666;">
-                <h2><span class="badge badge-pill" style = "background-color: #2d3666;">Enter your survey into the chain</span></h2>
+            <nav class="navbar navbar-light bg-primary">
+                <h2><span class="badge badge-pill bg-primary">Enter your survey into the chain</span></h2>
             </nav>
             <br> 
             <div class="form-group">
