--- a/login.html
+++ b/login.html
@@ -30,10 +30,10 @@
     <br> <br> <br>
     
     <div class="container">
+      <nav class="navbar navbar-light bg-primary">
+          <h2><span class="badge badge-pill bg-primary">Login</span></h2>
+      </nav>
       <form>
-        <div class="form-group row col-sm-10 offset-sm-2">
-          <h1>Login</h1>
-        </div>
         <br> <br>
         <div class="form-group row">
           <label for="inputUsername" class="col-sm-2 col-form-label">Username</label>
@@ -50,21 +50,11 @@
         <div class="form-group row">
           <div class="offset-sm-2 col-sm-10">
             <button type="submit" class="btn btn-primary">Sign in</button>
+            <button type="submit" class="btn btn-primary" style="float: right;">Register</button>
+            <p style="float : right; padding-right: 20px;">Is this your first time? Register Now. 
+            </p>
           </div>
-
         </div>
-        <div class="form-group row">
-          <p class="offset-sm-2 col-sm-10">
-            Is this your first time? Register Now.
-          </p>
-          <div class="offset-sm-2 
-          col-sm-10">
-            <button type="submit" class="btn btn-primary">Register</button>
-          </div>
-
-        </div>
-       
-
       </form>
     </div>
 
