--- a/unverified.html
+++ b/unverified.html
@@ -38,8 +38,8 @@
 
         <br>
         <div class="container">
-            <nav class="navbar navbar-light" style="background-color: #2d3666;">
-                <h2><span class="badge badge-pill" style="background-color: #2d3666;" >Explore Survey Data</span></h2>
+            <nav class="navbar navbar-light bg-primary">
+                <h2><span class="badge badge-pill bg-primary">Explore Survey Data</span></h2>
             </nav>
             <br> 
             
